apps/wg-easy/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-dns
  namespace: wg-easy
  annotations:
    metallb.io/loadBalancerIPs: 192.168.2.245
spec:
  type: LoadBalancer
  selector:
    app: wg-easy
  ports:
  - name: wg
    port: 30000
    targetPort: wg
    protocol: UDP
